[package]
name = "lothars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
protobuf = { version = "2", features = ["with-bytes"] }
snap = "1"

[build-dependencies]
protobuf-codegen-pure = "2"
