[package]
name = "lothars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "~1.0"
protobuf = "2"
snap = "1"

[build-dependencies]
protobuf-codegen = "2"
protobuf-codegen-pure = "2.27.1"

[features]
